feat: customize notification sound, optimize layouts, and secure admin accounts